course work accepted

--- a/beamerbasetitle.sty
+++ b/beamerbasetitle.sty
@@ -29,6 +29,7 @@
 
 \usepackage[utf8]{inputenc}
 \usepackage[english,russian]{babel}
+\usepackage{minted}
 
 \mode
 <article>
@@ -94,7 +95,7 @@
     \begingroup
       \let\beamer@saved@hook\pdfstringdefPreHook
       \pdfstringdefDisableCommands{%
-        \let\\=\ 
+        \let\\=\
         \let\newline=\\%
       }%
       \let\thanks=\@gobble%
@@ -284,7 +285,7 @@
 <all>
 
 
-%%% Local Variables: 
+%%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "~/texmf/tex/latex/beamer/examples/beamerexample1.tex"
-%%% End: 
+%%% End:
